# kobold_assistant

./: .gitignore  README.md  add-devices.sh  build_and_run.sh  pyproject.toml  requirements.apt  run.sh
src/kobold_assistant/: .gitignore  __main__.py  default_settings.json  default_settings.py  mumble.py  radio_silence.py  service.py  settings.py  test_mumble.py
src/kobold_assistant/ai/client/: ai_client.py  koboldai.py
src/kobold_assistant/ai/memory/: memory.py  null_memory.py
src/kobold_assistant/ai/model/: ai_model.py  default.py  guess.py
src/kobold_assistant/ai/params/: __init__.py
src/kobold_assistant/ai/prompt/: __init__.py
src/kobold_assistant/ai/tools/: __init__.py
src/kobold_assistant/dialog_history/: dialog_history.py  event.py  spoken_audio_event.py  typed_text_event.py
src/kobold_assistant/dialog_service/: config.py  dialog_service.py  simple_dialog_service.py
src/kobold_assistant/io/audio/: audio_io.py  mumble.py  webrtc.py
src/kobold_assistant/io/text/: audio_text_io.py  text_io.py
src/kobold_assistant/participant/: participant.py
src/kobold_assistant/participant/assistant/: assistant.py  simple.py
src/kobold_assistant/participant/user/: remote_audio_user.py  user.py
src/kobold_assistant/stt/: stt.py  whisper.py
src/kobold_assistant/tts/: coqui.py  tts.py
